--- a/templates/orderConfirmation.hbs
+++ b/templates/orderConfirmation.hbs
@@ -26,7 +26,8 @@
             text-align: center; 
         }
         .header img { 
-            height: 50px; 
+            height: 80px; /* Increase the height for better visibility */
+            max-width: 100%;
         }
         .content { 
             padding: 30px; 
