--- a/mailing-service/src/templates/statusUpdate.hbs
+++ b/mailing-service/src/templates/statusUpdate.hbs
@@ -29,15 +29,7 @@
             height: 50px; 
         }
         .content { 
-            display: flex;
-            align-items: center;
             padding: 30px; 
-        }
-        .content-text {
-            flex: 1;
-        }
-        .content-icon {
-            margin-left: 20px;
         }
         .content h1 {
             font-size: 24px;
@@ -73,17 +65,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="https://i.ibb.co/kGg4TGD/Amine-Jameli-Services-Logo.png" alt="Amine Jameli Services">
+            <img src="https://i.postimg.cc/XN2P7RWn/Amine-Jameli-Services-Logo.png" alt="Your Company Logo">
         </div>
         <div class="content">
-            <div class="content-text">
-                <h1>Your order status has been updated!</h1>
-                <p><strong>New Status:</strong> {{status}}</p>
-                <p><strong>Details:</strong> {{details}}</p>
-            </div>
-            <div class="content-icon">
-                <img src="https://i.ibb.co/Ss4z9Zq/order-confirmation.png" alt="Order Confirmation " width="80">
-            </div>
+            <h1>Your order status has been updated!</h1>
+            <p><strong>New Status:</strong> {{status}}</p>
+            <p><strong>Details:</strong> {{details}}</p>
         </div>
         <div class="footer">
             Thank you for choosing our service!
